02-k3d-config/03-port-mapping/deployments/nginx-loadbalancer.yaml
# nginx with LoadBalancer service - accessible via localhost:9090
# Uses k3s servicelb/klipper-lb with direct port mapping 9090:9090
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lb
  labels:
    app: nginx-lb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-lb
  template:
    metadata:
      labels:
        app: nginx-lb
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb-service
spec:
  type: LoadBalancer
  selector:
    app: nginx-lb
  ports:
  - port: 9090
    targetPort: 80
    protocol: TCP
