02-k3d-config/03-port-mapping/deployments/nginx-nodeport.yaml
# nginx with NodePort service - accessible via localhost:9000
# Uses NodePort 30000 with k3d server:0 nodeFilter mapping 9000:30000
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-np
  labels:
    app: nginx-np
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-np
  template:
    metadata:
      labels:
        app: nginx-np
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-np-service
spec:
  type: NodePort
  selector:
    app: nginx-np
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
    protocol: TCP
